--- a/templates/home.html
+++ b/templates/home.html
@@ -8,36 +8,11 @@
         width: 300px;
         padding: 10px;
       }
-      ul {
-        padding-left: 15px;
-      }
-      li {
-        margin: 4px 0;
-      }
-      button {
-        padding: 6px 10px;
-        margin-top: 10px;
-        background-color: #007bff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-      button:hover {
-        background-color: #0056b3;
-      }
     </style>
   </head>
   <body>
-    
-    <h2>Valid Emails</h2>
-
-    <ol id="emailList"></ol>
-    <button id="findEmailsBtn">Find Emails</button>
-    
-    
-    <script src="../popup.js"></script>
-    
+    <h2>Filter-Valid-Emails-Extension-main</h2>
   </body>
 </html>
+
 
