--- a/templates/home.html
+++ b/templates/home.html
@@ -5,14 +5,32 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        width: 300px;
         padding: 10px;
+        text-align: center
       }
+      .card {
+  width: 500px;
+  padding: 20px;
+  border: 3px solid black;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  
+  
+}
+.card-container {
+  display: flex;
+  
+  justify-content: center; 
+}
     </style>
   </head>
   <body>
-    <h2>Filter-Valid-Emails-Extension-main</h2>
+    <div class="card-container">
+  <div class="card">
+    <h2>Find all the valid emails from the open tabs by using the extension</h2>
+  </div>
+</div>
+    
   </body>
 </html>
-
 
