--- a/templates/home.html
+++ b/templates/home.html
@@ -27,10 +27,11 @@
   <body>
     <div class="card-container">
   <div class="card">
-    <h2>Find all the valid emails from the open tabs by using the extension</h2>
+    <h2>Find all the valid emails by using the extension</h2>
   </div>
 </div>
     
   </body>
 </html>
+
 
