--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Email Finder</title>
+    <title>Email Validator</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -33,5 +33,6 @@
     
   </body>
 </html>
+
 
 
