--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Email Validator</title>
+    <title>FinderFox</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -33,6 +33,5 @@
     
   </body>
 </html>
-
 
 
