--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Email Validator</title>
+    <title>FinderFox</title>
     <style>
       body {
         text-align: center;
